# arctic-spa-dc

./: .gitignore  Makefile  README.md  pyproject.toml
example/: demo.py
src/: arctic_spa_dc.proto
src/arctic_spa_dc/: arctic_spa_client.py  bytebuffer.py  client.py  discovery.py  packet.py
src/arctic_spa_dc/proto/: Clock_pb2.py  Command_pb2.py  Configuration_pb2.py  Error_pb2.py  Filter_pb2.py  Information_pb2.py  Live_pb2.py  Lpc_pb2.py  MobileAuthenticate_pb2.py  MobileAvailableSpas_pb2.py  MobileSpaRegistration_pb2.py  MobileWifiDetails_pb2.py  OnzenLive_pb2.py  OnzenSettings_pb2.py  Peak_pb2.py  Peripheral_pb2.py  Router_pb2.py  Settings_pb2.py  arctic_spa_dc_pb2.py
src/schemas/: Clock.proto  Command.proto  Configuration.proto  Error.proto  Filter.proto  Information.proto  Live.proto  Lpc.proto  MobileAuthenticate.proto  MobileAvailableSpas.proto  MobileSpaRegistration.proto  MobileWifiDetails.proto  OnzenLive.proto  OnzenSettings.proto  Peak.proto  Peripheral.proto  Router.proto  Settings.proto
