[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
name = "arctic-spa-dc"
version = "0.1.0"
description = "A Python interface for communicating directly with Arctic Spa brand hot tubs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "protobuf==3.20.0"
]
classifiers = [
    "Private :: Do Not Upload"
]

[project.urls]
"Homepage" = "https://github.com/matt-blodgett/arctic-spa-dc"
"Bug Tracker" = "https://github.com/matt-blodgett/arctic-spa-dc/issues"
